Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19302

CouchKVStore::readVBState does not log couchstore_open_local_document errors at a visible level

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 3.1.5, 4.1.1, 4.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Yes

    Description

      (Also doesn't get the OS-level error message)

      1
          errCode = couchstore_open_local_document(db, (void *)id.buf,
      2
                                                   id.size, &ldoc);
      3
          if (errCode != COUCHSTORE_SUCCESS) {
      4
              logger.log(EXTENSION_LOG_DEBUG,
      5
                         "CouchKVStore::readVBState: Failed to "
      6
                         "retrieve stat info for vBucket: %d with error: %s",
      7
                         vbId, couchstore_strerror(errCode));
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            will.gardner Will Gardner (Inactive)
            will.gardner Will Gardner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty