MB-19302 Use visible logging on couchstore_open_local_document error

This change ensures that CouchKVStore::readVBState will log an
error at a default visible level in the event that
couchstore_open_local_document fails. In addition any serious error
(i.e. any not DOC_NOT_FOUND) will be logged at WARNING.

Change-Id: I1479fc6ee2c830e5d1b1e52324617a81ae1434fe
Reviewed-on: http://review.couchbase.org/63738
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>